kubernetes/kubernetes-front.yml
---
apiVersion: v1
kind: Service
metadata:
  name: front
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 8080
  selector:
    app: front
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: front
spec:
  replicas: 1
  selector:
    matchLabels:
      app: front
  template:
    metadata:
      labels:
        app: front
    spec:
      containers:
        - name: front
          image: docker.maxilog.tech/poc/spring/front:1.0.0
          ports:
            - containerPort: 8080
