kubernetes/kubernetes-notification.yml
---
apiVersion: v1
kind: Service
metadata:
  name: notification
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 8082
  selector:
    app: notification
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: notification
spec:
  replicas: 1
  selector:
    matchLabels:
      app: notification
  template:
    metadata:
      labels:
        app: notification
    spec:
      containers:
        - name: notification
          image: docker.maxilog.tech/poc/spring/notification:1.0.0
          ports:
            - containerPort: 8082
          imagePullPolicy: Always
