kubernetes/kubernetes-order.yml
---
apiVersion: v1
kind: Service
metadata:
  name: order
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 8084
  selector:
    app: order
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: order
spec:
  replicas: 1
  selector:
    matchLabels:
      app: order
  template:
    metadata:
      labels:
        app: order
    spec:
      containers:
        - name: order
          image: docker.maxilog.tech/poc/spring/order:1.0.0
          ports:
            - containerPort: 8084
          imagePullPolicy: Always
