kubernetes/kubernetes-product.yml
---
apiVersion: v1
kind: Service
metadata:
  name: product
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 8083
  selector:
    app: product
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: product
spec:
  replicas: 1
  selector:
    matchLabels:
      app: product
  template:
    metadata:
      labels:
        app: product
    spec:
      containers:
        - name: product
          image: docker.maxilog.tech/poc/spring/product:1.0.0
          ports:
            - containerPort: 8083
          imagePullPolicy: Always
